--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,7 +8,7 @@
 
 .loading_bigger {    
     background-color: #ffffff;
-    background-image: url("https://www.romeloft.com/images/big-spinner.gif");
+    background-image: url("/static/images/spinner.gif");
     background-size: 60px 60px;
     background-position: center;
     background-repeat: no-repeat;
@@ -16,7 +16,7 @@
 
 .valid{
     background-color: #ffffff;
-    background-image: url("https://www.pinclipart.com/picdir/big/33-334545_download-green-tick-transparent-background-clipart.png");
+    background-image: url("/static/images/tick-min.png");
     background-size: 20px 20px;
     background-position:right center;
     background-repeat: no-repeat;
@@ -25,7 +25,7 @@
 
 .invalid{
     background-color: #ffffff;
-    background-image: url("http://clipart-library.com/images/rcLxML7Ri.png");
+    background-image: url("/static/images/wrong-min.png");
     background-size: 20px 20px;
     background-position:right center;
     background-repeat: no-repeat;
